  aux avis et appréciations pour ses classes.
- Possibilité d'ouvrir l'accès parent/élève aux appréciations et avis élève par
  élève (pour les établissements dans lesquels les bulletins sont remis en mains 
  propres aux familles).
- Possibilité d'envoyer les bulletins aux familles par mail lors de l'archivage de fin d'année.
- Possibilité de saisir les Éléments de Programmes abordés, pour les faire apparaitre dans une colonne du bulletin.

Cahiers de textes:
- Possibilité de définir des Tag (Contrôle, EPI, AP) pour les notices de CDT.
- Possibilité de définir un proxy pour le téléchargement des images
  de formules mathématiques générées sur https://latex.codecogs.com

Absences2:
- Affichage des manquements du jour sur la page d'accueil simplifiée parent.
- Possibilité de ne pas afficher par défaut les saisies englobées ou traitées.
- Possibilité d'afficher un rappel des absences non justifiées depuis un certain temps.
- Ajout d'un caractère Valable ou non pour les motifs (utile pour les statistiques nationales).
  Pensez à effectuer le paramétrage de ce caractère dans
     Gestion des modules/Absences 2/Définir les motifs des absences

Discipline:
- Ajout de droits extractDiscProf et extractDiscProfP pour les accès professeur 
  et professeur principal à l'export ODS des incidents.
- Possibilité d'extraire un bilan ODS par période avec chiffrage, avec choix des types de sanction,...
- Sanctions du jour: Possibilité de tri sur le tableau des sanctions non effectuées.
- Possibilité de définir des modèles spécifiques pour des types de sanctions particuliers.
- Possibilité d'afficher (et extraire en CSV) les sanctions de la semaine et non plus seulement du jour.

Engagements:
- Possibilité d'afficher les engagements sur les pages Equipe pédago.

Accueil élèves et parents
- en page résumé, ne pas afficher l'aide sur les devoirs si le module cahier de texte n'est pas ouvert.

Statistiques:
- Ajout de l'extraction des sous-groupes ne concernant qu'une classe.